[package]
authors = [
	"Blake Lee <blake@volian.org>",
	"Hunter Wittenborn <hunter@hunterwittenborn.com>"
]
categories = [
	"api-bindings",
	"os",
]
description = "Bindings for libapt-pkg for help oma handle apt"
license = "GPL-3.0-or-later"
name = "oma-apt"
readme = "README.md"
repository = "https://gitlab.com/AOSC-Dev/oma-apt"
version = "0.1.2"

edition = "2021"

[dependencies]
cxx = "1.0"
once_cell = "1.10.0"
terminal_size = "0.2.5"

[build-dependencies]
cxx-build = "1.0"
