[package]
authors = [
	"Blake Lee <blake@volian.org>",
	"Hunter Wittenborn <hunter@hunterwittenborn.com>"
]
categories = [
	"api-bindings",
	"os",
]
description = "Bindings for libapt-pkg for help oma handle apt"
license = "GPL-3.0-or-later"
name = "oma-apt"
readme = "README.md"
repository = "https://github.com/AOSC-Tracking/oma-apt"
version = "0.4.1"

edition = "2021"

[dependencies]
cxx = "1.0"
paste = "1.0"
terminal_size = "0.3.0"

[build-dependencies]
cxx-build = "1.0"
